--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     "email": "developer@instrumentisto.com"
   }],
   "require": {
+    "ext-json": "*",
+    "ext-pcre": "*",
     "composer-plugin-api": "^1.1"
   },
   "require-dev": {
