--- a/.editorconfig
+++ b/.editorconfig
@@ -19,3 +19,11 @@ indent_size = 4
 [*.json]
 indent_style = space
 indent_size = 2
+
+[*.{yml,yaml}]
+indent_style = space
+indent_size = 2
+
+[*.xml]
+indent_style = space
+indent_size = 4
