Implement unit and E2E tests and integrate with Travis CI (#2)
Additionally:
- refactor UpdatePlatformReqsCommand class
- add '--clear' option
- update README

--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,26 @@
     "composer-plugin-api": "^1.1"
   },
   "require-dev": {
-    "composer/composer": "*"
+    "composer/composer": "*",
+    "phpunit/phpunit": "^5.0"
   },
   "autoload": {
     "psr-4": {
       "Instrumentisto\\Composer\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Instrumentisto\\Composer\\Tests\\": "tests/"
+    }
+  },
   "extra": {
     "class": "Instrumentisto\\Composer\\Plugin"
   },
-  "prefer-stable": true
+  "scripts": {
+    "test": "phpunit"
+  },
+  "prefer-stable": true,
+  "config": {
+  }
 }
