--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "instrumentisto/composer-platform-generator",
-  "version": "0.1.0-dev",
+  "version": "0.1.0",
   "type": "composer-plugin",
   "description": "Generates config.platform section for composer.json",
   "license": "MIT",
